ensure word wrapping of the label of a radio group selection in the form template #7899

--- a/gato-area-mail/src/main/resources/gato-area-mail/css/mailform.scss
+++ b/gato-area-mail/src/main/resources/gato-area-mail/css/mailform.scss
@@ -72,6 +72,7 @@
     font-weight: 500;
     display: block;
     margin-bottom: 0.8rem;
+    white-space: normal;
 }
 
 .txst-form-text-subtitle {
